--- a/AF-Lab-5/package.json
+++ b/AF-Lab-5/package.json
@@ -12,6 +12,8 @@
     "@koa/router": "^10.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "uuid": "^8.3.2"
   }
 }
